# claude-clarity

./: .clawhubignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORE_IDENTITY.md  LICENSE  README.md  SECURITY.md  SKILL.md  SYSTEM_REQUIREMENTS.md  UPGRADE-v1.5.0.md  _meta.json  clawhub.json  eslint.config.js  install.sh  jest.config.js  lesson-bank.json  meaningful-core.json  package-lock.json  package.json  test-boot.js  test-dispatch.js  test-prompts.json
.clawhub/: lock.json
.opencode/: CRON_INSTALL_GUIDE.md  config.json
archive/: README.md
assets/: demo-before-after.md
daemon/: mcp-daemon.js  mcp-wrapper.js
dict-data/: association-graph.json  generate-graph.js
docs/: ANALYSIS_REPORT.md  APPLICATION_GUIDE.md  BILINGUAL_STANDARD.md  BRAND_GUIDELINES.md  CODE_OPTIMIZATION_PLAN.md  COMPLETE_FIX_SUMMARY.md  CONTRIBUTING.md  DATA_FLOW_ARCHITECTURE.md  ERROR_FIX_REPORT_2026-04-07.md  EVOLUTION_SYSTEM.md  FEATURES_SIMPLE.md  (+57 more)
eval/bench-lite/: eval_decision_report.json  eval_heartbug.py  eval_report.json  pyproject.toml
eval/bench-lite/agent_bench_lite/: __init__.py  cli.py
eval/bench-lite/agent_bench_lite/adapters/: __init__.py  anthropic_adapter.py  base.py  heartbug_adapter.py  openai_adapter.py
eval/bench-lite/agent_bench_lite/core/: __init__.py  evaluator.py  reporter.py  runner.py
eval/bench-lite/agent_bench_lite/dimensions/: __init__.py  base.py  context_retention.py  error_recovery.py  instruction_following.py  multi_step_reasoning.py  planning.py  tool_calling.py
eval/bench-lite/agent_bench_lite/tasks/: __init__.py  sample_tasks.json
(+750 files in other folders)
