[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-bench-lite"
version = "0.1.0"
description = "A lightweight AI Agent evaluation benchmark toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Agent Bench Lite Contributors" },
]
keywords = ["ai", "agent", "benchmark", "evaluation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.30.0"]
all = ["anthropic>=0.30.0", "openai>=1.30.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
agent-bench-lite = "agent_bench_lite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_bench_lite"]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
